--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ h2, h3, h4 {
 
 .form-control input[type="number"] {
     -moz-appearance: textfield;
+    appearance: textfield;
 }
 
 .form-control input[type="number"]::-webkit-outer-spin-button,
